--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-  <title>Draw Together</title>
+  <title>Ну давай так</title>
 </head>
 <body style="padding: 10px;">
-  <h1>Draw Together</h1>
+  <h1>Будь-шо</h1>
   <p  class="lead">Draw and have fun with friends</p>
 
   <div>
